mobile overflow fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -45,8 +45,8 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  height: 100vh;
-  width: 100vw;
+  height: 100dvh;
+  width: 100dvw;
   transition: 0.1s;
   transition: top 0s ease-out;
 }
@@ -70,6 +70,7 @@ body {
   flex-direction: column;
   top: clamp(20vh, 20rem, 20vw);
   right: 5vw;
+  left: 5vw;
 }
 
 .name-intro-title-wrap {
@@ -91,7 +92,6 @@ body {
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
-  gap: 5%;
 }
 .text-p-wrap p {
   width: 60%;
@@ -99,6 +99,7 @@ body {
 }
 
 .marquee-wrap {
+  overflow: hidden;
   position: absolute;
   top: 110vh;
   left: 0;
@@ -108,12 +109,12 @@ body {
 }
 
 .marquee {
+  position: relative;
   --gap: 1rem;
   display: flex;
   overflow: hidden;
   user-select: none;
   gap: var(--gap);
-  width: 100%;
 }
 
 .marquee_content {
@@ -122,7 +123,6 @@ body {
   justify-content: space-around;
   gap: var(--gap);
   min-width: 100%;
-  transform: rotate(-10deg);
 }
 
 .right {
@@ -149,8 +149,8 @@ body {
   text-transform: uppercase;
   font-size: 6rem;
   white-space: nowrap;
-  display: block;
-  padding: 0.5rem 0;
+  list-style: none;
+  padding: 0 0;
 }
 
 .description {
